--- a/style.css
+++ b/style.css
@@ -83,12 +83,23 @@ margin-top: 40px;
     background-color: orangered;
 }
 
-.container button {
+.container a {text-decoration: none;
     margin-top: 30px;
     width: 300px;
     height: 50px;
-    background-color: transparent;
+    background-color: whitesmoke;
     font-family: Verdana;
     font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-width: 1px;
+    border-color: rgb(0, 0, 0);
+    color: black;
+    transition: background-color 0.3 ease;
+
+}
+.container a:hover{
+    background-color: gray
 }
 
