--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ main {
     height: fit-content;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: lightseagreen;
 }
 
