--- a/styles/content.css
+++ b/styles/content.css
@@ -1,53 +1,84 @@
 .content {
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 60px);
+    margin: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.content .text-wrapper {
+.text-wrapper {
     width: 100%;
     margin-top: 24px;
-    display: flex;
-    flex-direction: column;
 }
 
-.content .text-wrapper h1 {
-    font-size: 80px;
+.text-wrapper h1 {
+    font-size: 60px;
     font-weight: 500;
 }
 
-.content .text-wrapper h2 {
-    font-size: 80px;
+.text-wrapper h2 {
+    font-size: 60px;
     font-weight: 700;
 }
 
-.content .link-wrapper {
+.link-wrapper {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.content .link-wrapper a {
+.link-wrapper a {
     font-size: 18px;
     text-decoration: none;
     color: white;
 }
 
-.content .wrapper {
+.link-wrapper h3 {
+    font-weight: 800;
+    font-size: 34px;
+    margin-bottom: 8px;
+}
+
+.wrapper {
     width: calc(100% - 40px);
     height: fit-content;
     margin: 20px;
     gap: 18px;
+    display: flex;
+    justify-content: center;
+    gap: 128px;
+    flex-wrap: wrap;
 }
 
-.content .wrapper .box {
-    flex-basis: calc(100% / 3);
-    font-size: 18px;
+.wrapper .box-link {
+    width: 200px;
+    height: 200px;
+    font-size: 34px;
     text-decoration: none;
     color: white;
+    background-color: green;
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+}
+
+.lessons {
+    width: 100%;
+    background-color: lightskyblue;
+}
+
+.lessons .title {
+    width: calc(100% - 160px);
+    font-size: 60px;
+    font-weight: 700;
+    margin: 80px;
+    display: flex;
+    justify-content: center;
 }
 
 @media (max-width: 400px) {
