--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -6,6 +6,22 @@ nav {
     flex-wrap: wrap;
 }
 
+nav button {
+    font-style: 14px;
+    padding: 16px;
+    color: black;
+    background-color: transparent;
+    border: none;
+    display: none;
+    transition: opacity 0.5s ease, background-color 0.5s ease;
+}
+
+nav button:hover {
+    cursor: pointer;
+    background-color: rgb(189, 181, 181);
+    opacity: 0.7;
+}
+
 nav a {
     font-style: 14px;
     padding: 16px;
