--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -4,6 +4,7 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 nav button {
@@ -22,14 +23,20 @@ nav button:hover {
     opacity: 0.7;
 }
 
-nav a {
+nav div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav div a {
     font-style: 14px;
     padding: 16px;
     color: black;
     transition: opacity 0.5s ease, background-color 0.5s ease;
 }
 
-nav a:hover {
+nav div a:hover {
     cursor: pointer;
     background-color: rgb(189, 181, 181);
     opacity: 0.7;
