--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -8,7 +8,7 @@ nav {
     font-style:normal;
 }
 
-nav button {
+nav button {    
     font-size: 14px;
     padding: 16px;
     color: black;
@@ -30,8 +30,9 @@ nav div {
     align-items: center;
 }
 
-nav div img {
-    display: none;
+
+
+nav div .user-button img {
     width: 24px;
     height: 24px;
     border-radius: 50%;
