--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -1,6 +1,6 @@
 .content {
     width: calc(100% - 60px);
-    margin: 30px;
+    margin: 1x;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,12 +9,16 @@
 
 .text-wrapper {
     width: 100%;
-    margin-top: 24px;
+    margin-top: 20px;
 }
 
 .text-wrapper h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 60px;
-    font-weight: 500;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .text-wrapper h2 {
@@ -22,19 +26,45 @@
     font-weight: 700;
 }
 
-.link-wrapper {
-    width: 100%;
+.text-wrapper h3 {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    display: flex;
+    text-align: center;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.link-wrapper {
+    width: calc(100% - 30px);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 11px;
+
 }
 
 .link-wrapper a {
+    flex-basis: 30%;
     font-size: 18px;
+    text-align: center;
     text-decoration: none;
     color: white;
+    border-width: 1px;
+    padding: 10px;
+    border: solid;
 }
-
+.link-wrapper a:hover {
+    background-color:gray;
+    cursor:pointer;
+    scale: 1.05;
+}
 .link-wrapper h3 {
+    margin-top: 200px;
     font-weight: 800;
     font-size: 34px;
     margin-bottom: 8px;
@@ -51,27 +81,29 @@
     flex-wrap: wrap;
 }
 
-.wrapper .box-link {
-    width: 200px;
-    height: 200px;
-    font-size: 34px;
+.wrapper .box-linkTP {
+    width: 150px;
+    height: 150px;
+    font-size: 35px;
     text-decoration: none;
     color: white;
     background-color: green;
     display: flex;
     padding: 20px;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     border-style: solid;
     border-width: 1px;
     border-color: white;
     border-radius: 10px;
 }
-.wrapper .box-link:hover{
+.wrapper .box-linkTP:hover{
     background-color: gray;
     cursor: pointer;
     scale: 1.1;
 }
+
 .wrapper .box-linkNF{
     width: 200px;
     height: 200px;
@@ -82,6 +114,7 @@
     display: flex;
     padding: 20px;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     border-style: solid;
     border-width: 1px;
@@ -89,15 +122,16 @@
     border-radius: 10px;
 }
 .wrapper .box-linkNF{
-    width: 200px;
-    height: 200px;
-    font-size: 34px;
+    width: 150px;
+    height: 150px;
+    font-size: 25px;
     text-decoration: none;
     color: white;
     background-color: rgb(255, 0, 0);
     display: flex;
     padding: 20px;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     border-style: solid;
     border-width: 1px;
@@ -111,9 +145,9 @@
 }
 
 .wrapper .box-linkE{
-    width: 200px;
-    height: 200px;
-    font-size: 34px;
+    width: 150px;
+    height: 150px;
+    font-size: 30px;
     text-decoration: none;
     color: white;
     background-color: rgb(0, 117, 252);
@@ -133,6 +167,51 @@
      scale: 1.1;
 }
 
+.wrapper .box-linkVL {
+    width: 200px;
+    height: 200px;
+    font-size: 35px;
+    text-decoration: none;
+    color: white;
+    background-color: green;
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+    border-radius: 10px;
+}
+.wrapper .box-linkVL:hover{
+    background-color: gray;
+    cursor: pointer;
+    scale: 1.1;
+}
+
+.wrapper .box-linkPPAA {
+    width: 200px;
+    height: 200px;
+    font-size: 19px;
+    text-decoration: none;
+    color: white;
+    background-color: green;
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+    border-radius: 10px;
+}
+.wrapper .box-linkPPAA:hover{
+    background-color: gray;
+    cursor: pointer;
+    scale: 1.1;
+}
 .lessons {
     width: 100%;
     background-color: lightskyblue;
