--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -6,6 +6,7 @@ nav {
     flex-wrap: wrap;
     justify-content: space-between;
     font-style:normal;
+    
 }
 
 nav button {    
@@ -55,10 +56,12 @@ nav div a {
     padding: 16px;
     color: black;
     transition: opacity 0.5s ease, background-color 0.5s ease;
+    font-weight:bolder;
+    
 }
 
 nav div a:hover {
+    scale: 1.1;
     cursor: pointer;
-    background-color: rgb(189, 181, 181);
     opacity: 0.7;
 }
