--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -219,7 +219,7 @@
 
 .about {
     width: 100%;
-    height: 580px;
+    height: fit-content;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -232,6 +232,7 @@
     display: flex;
     text-align: center;
     margin-bottom: 70px;
+    margin-top: 70px;
 }
 
 .about p {
@@ -239,6 +240,7 @@
     max-width: 95%;
     font-family: 500;
     text-align: justify;
+    padding: 20px;
 }
 
 .lessons .title {
