--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -18,7 +18,7 @@
     align-items: center;
     font-size: 60px;
     font-weight: bold;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .text-wrapper h2 {
@@ -79,6 +79,7 @@
     justify-content: center;
     gap: 128px;
     flex-wrap: wrap;
+    height: 100vh;
 }
 
 .wrapper .box-linkTP {
@@ -97,6 +98,7 @@
     border-width: 1px;
     border-color: white;
     border-radius: 10px;
+    margin-top: 70px;
 }
 .wrapper .box-linkTP:hover{
     background-color: gray;
@@ -120,6 +122,7 @@
     border-width: 1px;
     border-color: white;
     border-radius: 10px;
+    margin-top: 70px;
 }
 .wrapper .box-linkNF{
     width: 150px;
@@ -159,6 +162,7 @@
     border-width: 1px;
     border-color: white;
     border-radius: 10px;
+    margin-top: 70px;
 }
 
 .wrapper .box-linkE:hover{
@@ -218,21 +222,24 @@
 }
 
 .about {
-    width: 100%;
-    height: fit-content;
+    width: calc(100% - 100px);
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgb(10, 10, 10, 0.5);
+    background-color: rgba(100, 99, 99, 0.788);
+    padding: 50px;
+    margin-top: 70px;
 }
 
 .about h1 {
-    font-size: 48PX;
+    font-size: 40PX;
     display: flex;
     text-align: center;
     margin-bottom: 70px;
-    margin-top: 70px;
+    margin-top: 20px;
+    position: fi;
 }
 
 .about p {
