--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -4,7 +4,11 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(10, 10, 10, 0.5);
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(10, 10, 10, 0.6);
+    color: #fff9f9;
+    bottom: 0px;
+    position: fixed;
 }
 
 footer p {
