--- a/public/style.css
+++ b/public/style.css
@@ -81,15 +81,16 @@ main.orangered {
     flex-direction: row;
     flex-wrap: wrap;
     column-gap: 100px;
-
+    row-gap: 20px;
+    
 }
 
 .content .container {
-margin-top: 20px;
+    margin-top: 50px;
 }
 .XYZM {
     font-size: 80px;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: rgba(10, 10, 10, 0.6);
     color: white;
     font-family: 'Balsamiq Sans', cursive;
